--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -56,7 +56,7 @@
                 <td>{{ object.valor_prestacao }}</td>
             </tr>
             <tr>
-                <th class="text-right">Data do Empréstimo</th>
+                <th class="text-right">Data do Empréstimo modificada</th>
                 <td type="form-control">{{ object.data_emprestimo }}</td>                               
             </tr>            
         </tbody>
