--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -51,7 +51,7 @@
                 <div class="col-sm-3"> 
                     <div class="form-group">
                         <label for="">{{form.data_emprestimo.label}}</label><br>
-                        {% render_field form.data_emprestimo class="form-control" id="dataselecionada" onblur="somar(),sequencial()" %}   <br>                    
+                        {% render_field form.data_emprestimo class="form-control" id="dataselecionada"%}   <br>                    
                         {{object.data_emprestimo}}                 
                     </div>
                 </div>
@@ -59,21 +59,31 @@
                 <div class="col-sm-3">
                     <div class="form-group">
                         <label for="">{{form.data_emprestimo.label}}</label>   
-                        {% render_field form.data_emprestimo class="form-control" id="dataselecionada" type="date" onblur="somar(),sequencial()" %}
+                        {% render_field form.data_emprestimo class="form-control" id="dataselecionada" type="date"%}
                     </div>                  
                 </div>            
             {% endif %}  
 
+            {% if object.pk %} 
             <div class="col-sm-3">
                 <div class="form-group">
                     <label for="">{{form.dt_teste.label}}</label>   
-                    {% render_field form.dt_teste class="form-control" id="dataselecionada" type="date" onblur="somar(),sequencial()" %}                    
+                    {% render_field form.dt_teste class="form-control" id="dataselecionada"%}                    
                 </div>                  
             </div> 
+            {% else %}    
+            <div class="col-sm-3">
+                <div class="form-group">
+                    <label for="">{{form.dt_teste.label}}</label>   
+                    {% render_field form.dt_teste class="form-control" id="dataselecionada" type="date" %}                    
+                </div>                  
+            </div> 
+            {% endif %}  
+
             <div class="col-sm-3">
                 <div class="form-group">
                     <label for="">{{form.n_de_teste.label}}</label>   
-                    {% render_field form.n_de_teste class="form-control" id="dataselecionada" type="date" onblur="somar(),sequencial()" %}                    
+                    {% render_field form.n_de_teste class="form-control" id="dataselecionada" type="date" %}                    
                 </div>                  
             </div> 
 
