--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -158,7 +158,7 @@ window.onload = function imprimir(){
         
         var principal          = valor_emprestado/qtd_parcelas         
     
-        var mes_do_emprestimo  = Number({{object.dt_teste.month}})
+        var mes_do_emprestimo  = Number({{object.dt_emprestimo.month}})
     
         var iof_inicial       = 0
         var iof_diario        = 0.0041        
@@ -220,15 +220,15 @@ window.onload = function imprimir(){
     var contador_meses = 0
     var contador_anos  = 0
     var meses = new Array("01", "02", "03", "04", "05", "06" ,"07", "08", "09", "10", "11", "12")
-    var dataEmprestimo = "{{ object.dt_teste}}"
+    var dataEmprestimo = "{{ object.dt_emprestimo}}"
     var dt = new Date(dataEmprestimo)
    		
     var dia
     var mes
     var ano
-    var aux_dia = {{object.dt_teste.day}}
-    var aux_mes = {{object.dt_teste.month}}
-    var aux_ano = {{object.dt_teste.year}}
+    var aux_dia = {{object.dt_emprestimo.day}}
+    var aux_mes = {{object.dt_emprestimo.month}}
+    var aux_ano = {{object.dt_emprestimo.year}}
     
     dia  = aux_dia
     mes  = aux_mes+contador_meses
@@ -242,7 +242,7 @@ window.onload = function imprimir(){
     var qtd_parcelas = parseInt("{{object.qtd_parcelas}}")
     qtd_parcelas_extenso = String(qtd_parcelas).extenso()
 
-    var data_emissao = "{{object.dt_teste|date:"d/m/Y"}}"
+    var data_emissao = "{{object.dt_emprestimo|date:"d/m/Y"}}"
     var valor_da_parcela = parseFloat("{{object.valor_emprestado|floatformat:2}}".replace(',', '.'))
     var valor_da_parcela_int = parseInt("{{object.valor_emprestado|floatformat:2}}".replace(',', '.'))
     
@@ -990,7 +990,7 @@ function toFixed(num, fixed) {
     
     var principal          = valor_emprestado/qtd_parcelas         
 
-    var mes_do_emprestimo  = Number({{object.dt_teste.month}})
+    var mes_do_emprestimo  = Number({{object.dt_emprestimo.month}})
 
     var iof_inicial       = 0
     var iof_diario        = 0.0041        
