--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -56,8 +56,8 @@
                 <td>{{ object.valor_prestacao }}</td>
             </tr>
             <tr>
-                {% comment %} <th class="text-right">Data do Empréstimo</th>
-                <td type="form-control">{{ object.data_emprestimo }}</td>                                {% endcomment %}
+                <th class="text-right">Data do Empréstimo</th>
+                <td type="form-control">{{ object.dt_emprestimo }}</td>                               
             </tr>            
         </tbody>
     </table>
