--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -591,14 +591,14 @@
 						</span>				
 					</td>
 					<td width="15%">
-						<p class="content left">&nbsp(-) Descontos </p>
+						<p class="content left">&nbspDesconto </p>
 						<p class="content left">&nbsp </p>
 					</td>
 				</tr>	
 				<!--6º linha-->				
 				<tr>
 					<td width="15%">
-						<p class="content left">&nbsp(+) Acréscimos </p>
+						<p class="content left">&nbspOutras Deduc/Abat.</p>
 						<p class="content left">&nbsp </p>
 					</td>
 					<td width="1px"></td>
@@ -615,7 +615,7 @@
 					</td>
 					<td width="1px"></td>
 					<td width="15%">
-						<p class="content left">&nbsp(=) Valor Pago  </p>	
+						<p class="content left">&nbspMora/Multa  </p>	
 						<p class="content left">&nbsp </p>
 					</td>
 				</tr>
@@ -628,9 +628,9 @@
 					</td>
 					<td width="1px"></td>
 					<td width="15%">
-						<p class="content left"><b>&nbspVisto do Operador</b></p>							
-						<p class="content center">Pago em:</p>						
-						<p class="content left">&nbsp&nbsp&nbsp&nbsp ____/____/____ </p>
+						<p class="content left"><b>&nbspValor cobrado</b></p>							
+						<p class="content center">&nbsp</p>						
+						<p class="content left">&nbsp&nbsp&nbsp&nbsp</p>
 					</td>
 				</tr>
 				<!--9º linha-->
@@ -647,7 +647,7 @@
 						<p class="content maiusculo">&nbspFiador: ${fiador} - &nbspCPF: ${cpf_fiador}</p>
 					</td>
 					<td width="15%">
-						<span class="title">&nbspOutros Acres.</span>
+						<span class="title">&nbsp</span>
 						<br/>
 						<span class="text"></span>
 					</td>
