--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -580,7 +580,7 @@
 				<!--5º linha-->			
 				<tr>
 					<td width="15%">
-						<p class="content left">&nbsp(-) Descontos </p>
+						<p class="content left">&nbspDescontos </p>
 						<p class="content left">&nbsp </p>	
 					</td>
 					<td width="1px"></td>
@@ -598,19 +598,19 @@
 				<!--6º linha-->				
 				<tr>
 					<td width="15%">
-						<p class="content left">&nbsp(+)Acréscimos</p>
+						<p class="content left">&nbspAcréscimos</p>
 						<p class="content left">&nbsp </p>
 					</td>
 					<td width="1px"></td>
 					<td width="15%">
-						<p class="content left">&nbspOutras Deduc/Abat.  </p>
+						<p class="content left">&nbspAcréscimos  </p>
 						<p class="content left">&nbsp </p>
 					</td>
 				</tr>
 				<!--7º linha-->
 				<tr>
 					<td width="15%">
-						<p class="content left">&nbsp(=) Valor Pago  </p>
+						<p class="content left">&nbspMora/Multa  </p>
 						<p class="content left">&nbsp </p>
 					</td>
 					<td width="1px"></td>
@@ -622,13 +622,13 @@
 				<!--8º linha-->
 				<tr>
 					<td width="15%">
-						<p class="content left"><b>&nbspVisto do Operador</b></p>							
-						<p class="content center">Pago em:</p>						
-						<p class="content left">&nbsp&nbsp&nbsp&nbsp ____/____/____ </p>						
+						<p class="content left">&nbspValor cobrado</p>							
+						<p class="content center">&nbsp</p>						
+						<p class="content left">&nbsp&nbsp&nbsp&nbsp</p>					
 					</td>
 					<td width="1px"></td>
 					<td width="15%">
-						<p class="content left"><b>&nbspValor cobrado</b></p>							
+						<p class="content left">&nbspValor cobrado</p>							
 						<p class="content center">&nbsp</p>						
 						<p class="content left">&nbsp&nbsp&nbsp&nbsp</p>
 					</td>
@@ -636,9 +636,9 @@
 				<!--9º linha-->
 				<tr>
 					<td width="15%">
-						<span class="title">&nbspOutros Acres.</span>
-						<br/>
-						<span class="text"></span>
+						<p class="content left"><b>&nbspVisto do Operador</b></p>							
+						<p class="content center">Pago em:</p>						
+						<p class="content left">&nbsp&nbsp&nbsp&nbsp ____/____/____ </p>
 					</td>
 					<td width="1px"></td>
 					<td width="39%" colspan="5">
@@ -647,9 +647,9 @@
 						<p class="content maiusculo">&nbspFiador: ${fiador} - &nbspCPF: ${cpf_fiador}</p>
 					</td>
 					<td width="15%">
-						<span class="title">&nbsp</span>
-						<br/>
-						<span class="text"></span>
+						<p class="content left"><b>&nbspVisto do Operador</b></p>							
+						<p class="content center">Pago em:</p>						
+						<p class="content left">&nbsp&nbsp&nbsp&nbsp ____/____/____ </p>
 					</td>
 				</tr>
 			</table>				
