Todas as listas com letra maiuscula

--- a/projeto/avalista/templates/avalista_list.html
+++ b/projeto/avalista/templates/avalista_list.html
@@ -5,6 +5,9 @@
 <style>
     thead{
         background-color: rgb(165, 165, 165);
+    }   
+    td{
+        text-transform: uppercase; 
     }
 </style>
 
