--- a/projeto/cliente_cnpj/templates/cliente_cnpj_list.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_list.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
+<style>
+    td{
+        text-transform: uppercase; 
+    }
+</style>
+
 <div class="class page-header">
     <span class="float-right">    
         <a href="{% url 'core:fiador_decision' %}" >
