--- a/projeto/cliente/templates/cliente_list.html
+++ b/projeto/cliente/templates/cliente_list.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
-
+{% comment %} {% load widget_tweaks %} {% endcomment %}
+{% block js %}{% endblock js %}
 {% block content %}
+
+<style>
+    td{
+        text-transform: uppercase; 
+    }
+</style>
 
 
 <div class="class page-header">
