--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -118,6 +118,11 @@ h3{
 } 
 /* STYLE DE CONTENT E TABS DOS TEMPLATES DE CADASTRO */
 
+
+/*ESTILO DAS LISTAS*/
+td.maiusculo{
+  text-transform: uppercase; 
+}
   
 </style>
 <!-- MEUS CSS -->  
