--- a/projeto/avalista/templates/avalista_list.html
+++ b/projeto/avalista/templates/avalista_list.html
@@ -6,9 +6,6 @@
     thead{
         background-color: rgb(165, 165, 165);
     }   
-    td{
-        text-transform: uppercase; 
-    }
 </style>
 
 <div class="class page-header">  
@@ -34,8 +31,8 @@
             <tbody>
                 {% for object in object_list  %}   
                 <tr>                              
-                    <td>{{ object.fiador_nome }}</td>
-                    <td>{{ object.fiador_cpf }}</td>   
+                    <td class="maiusculo">{{ object.fiador_nome }}</td>
+                    <td class="maiusculo">{{ object.fiador_cpf }}</td>   
                     <td style="text-align:center"> 
                         <a href="{{ object.get_absolute_url}}" ><button class="btn btn-info">Gerenciar</button></a> 
                     </td>
