Mascara de inscrição estadual

--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -72,7 +72,7 @@
         <div class="col-sm-6">                    
             <div class="form-group" >                
                 <label for="" class="required" >{{form.inscricao_estadual.label}} </label>        
-                {% render_field form.inscricao_estadual class="form-control" %}
+                {% render_field form.inscricao_estadual class="form-control insc-est-mask" %}
             </div>
         </div> 
         <div class="col-sm-6">                    
