forma constituição opcional

--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -65,7 +65,7 @@
         {% endif %}
         <div class="col-sm-5">                    
             <div class="form-group" >                
-                <label for="" class="required" >{{form.forma_constituicao.label}} </label>        
+                <label for="" >{{form.forma_constituicao.label}} </label>        
                 {% render_field form.forma_constituicao class="form-control" %}
             </div>
         </div>    
