--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -74,7 +74,7 @@ body {
 </head>
 <body>
 
-<div class="topnav" id="myTopnav">
+<div class="topnav no-print" id="myTopnav">
     <a href="{% url 'core:index' %}" class="active" class="nav-link">CREDCOOP</a>
     <a href="{% url 'core:cliente_select' %}">Clientes</a>
     <a href="{% url 'avalista:avalista_list' %}">Fiador</a>
