Padronizando forms em todos templates

--- a/projeto/avalista/templates/avalista_detail.html
+++ b/projeto/avalista/templates/avalista_detail.html
@@ -5,6 +5,12 @@
 .options{
     color: aqua;
 }
+/* .direita{
+    text-align: right;
+}
+.esquerda{
+    text-align: left;
+} */
 </style>
 
 <span class="pull-right">
@@ -21,6 +27,67 @@
             <input  value="{{ object.fiador_nome }}" readonly class="form-control">
         </div>
     </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label>CPF</label>
+            <input  value="{{ object.fiador_cpf }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label>RG</label>
+            <input value="{{ object.fiador_rg }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label>Orgão Emissor</label>
+            <input  value="{{ object.fiador_orgao_emissor }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label></label>
+            <input  value="{{ object. }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label></label>
+            <input  value="{{ object. }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label></label>
+            <input  value="{{ object. }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label></label>
+            <input  value="{{ object. }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label></label>
+            <input  value="{{ object. }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label></label>
+            <input  value="{{ object. }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label></label>
+            <input  value="{{ object. }}" readonly class="form-control">
+        </div>
+    </div>
+    
     
 </div>
 
