--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -20,44 +20,25 @@
                 {% render_field form.fiador_nome class="form-control" %}
             </div>    
         </div>  
-        <div class="col-sm-3">                    
+        <div class="col-sm-2">                    
             <div class="form-group" >                
                 <label for="" >{{form.fiador_cpf.label}} </label>        
                 {% render_field form.fiador_cpf class="form-control cpf-mask"%}
             </div>    
         </div>  
-        <div class="col-sm-3">                    
+        <div class="col-sm-2">                    
             <div class="form-group" >                
                 <label for="" >{{form.fiador_rg.label}} </label>        
                 {% render_field form.fiador_rg class="form-control" %}
             </div>    
         </div>  
-    </div>
-    <div class="row" >              
         <div class="col-sm-2">                    
             <div class="form-group" >                
                 <label for="" >{{form.fiador_orgao_emissor.label}} </label>        
                 {% render_field form.fiador_orgao_emissor  class="form-control upper_all" %}
             </div>    
         </div>  
-        <div class="col-sm-3">                    
-            <div class="form-group" >                
-                <label for="" >{{form.fiador_estado_civil.label}} </label>        
-                {% render_field form.fiador_estado_civil  class="form-control" %}
-            </div>    
-        </div>  
-        <div class="col-sm-2">                    
-            <div class="form-group" >                
-                <label for="" >{{form.fiador_nacionalidade.label}} </label>        
-                {% render_field form.fiador_nacionalidade  class="form-control" value="BRASILEIRA"%}
-            </div>    
-        </div> 
-        <div class="col-sm-2">                    
-            <div class="form-group" >                
-                <label for="" >{{form.fiador_naturalidade.label}} </label>        
-                {% render_field form.fiador_naturalidade  class="form-control" %}
-            </div>    
-        </div> 
+              
         {% if avalista %}
             <div class="col-sm-3">                    
                 <div class="form-group" >                
@@ -73,38 +54,29 @@
                 </div>    
             </div>             
         {% endif %}
-    </div> 
-    <hr>
-        <h3>CONTATO</h3>               
-    <hr/>
-    <div class="row">
-        <div class="col-sm-2">                    
-            <div class="form-group" >                
-                <label for="" >{{form.fiador_contato1.label}} </label>        
-                {% render_field form.fiador_contato1 class="form-control phone-mask" %}
-            </div>    
-        </div>  
-        <div class="col-sm-2"> 
-            <div class="form-group" > 
-                <label for="" >{{form.fiador_celular1.label}} </label>
-                {% render_field form.fiador_celular1 class="form-control cel-phone-mask" %}
-                <label class="checkbox-inline"> {{form.whatsapp1.label}} <input type="checkbox" value="whatsapp1" id="whatsapp1" name="whatsapp1"></label>                    
-            </div>    
-        </div>  
-        <div class="col-sm-2">
-            <div class="form-group" > 
-                <label for="" > {{form.fiador_celular2.label}} </label>   
-                {% render_field form.fiador_celular2 class="form-control cel-phone-mask" %}
-                <label class="checkbox-inline"> {{form.whatsapp2.label}} <input type="checkbox" value="whatsapp2" id="whatsapp2" name="whatsapp2"></label>                      
-            </div>     
-        </div>             
         <div class="col-sm-3">                    
             <div class="form-group" >                
-                <label for="" >{{form.fiador_email.label}} </label>        
-                {% render_field form.fiador_email class="form-control lower_all" %}
+                <label for="" >{{form.fiador_estado_civil.label}} </label>        
+                {% render_field form.fiador_estado_civil  class="form-control" %}
             </div>    
         </div>  
-    </div>
+        <div class="col-sm-2">                    
+            <div class="form-group" >                
+                <label for="" >{{form.fiador_naturalidade.label}} </label>        
+                {% render_field form.fiador_naturalidade  class="form-control" %}
+            </div>    
+        </div> 
+        <div class="col-sm-2">                    
+            <div class="form-group" >                
+                <label for="" >{{form.fiador_nacionalidade.label}} </label>        
+                {% render_field form.fiador_nacionalidade  class="form-control" value="BRASILEIRA"%}
+            </div>    
+        </div>     
+        <div class="col-sm-3">
+            <h5>PRECISA DE NOMEPAI/NOMEMÃE AQUI!?!?!?!</h5>
+        </div>
+
+    </div>     
     <hr>
         <h3>ENDEREÇO</h3>               
     <hr/>
@@ -148,18 +120,51 @@
         </div>            
         <div class="col-sm-4">                    
             <div class="form-group" >                
-                <label for="" >{{form.fiador_ponto_referencia.label}} </label>        
-                {% render_field form.fiador_ponto_referencia class="form-control" %}
-            </div>
-        </div>
-        <div class="col-sm-4">                    
-            <div class="form-group" >                
                 <label for="" >{{form.fiador_complemento.label}} </label>        
                 {% render_field form.fiador_complemento class="form-control" %}
             </div>
         </div>               
+        <div class="col-sm-4">                    
+            <div class="form-group" >                
+                <label for="" >{{form.fiador_ponto_referencia.label}} </label>        
+                {% render_field form.fiador_ponto_referencia class="form-control" %}
+            </div>
+        </div>
         {% comment %} ENDEREÇO FIM {% endcomment %}
     </div>
+    <hr>
+        <h3>CONTATO</h3>               
+    <hr/>
+    <div class="row">
+        <div class="col-sm-2">                    
+            <div class="form-group" >                
+                <label for="" >{{form.fiador_contato1.label}} </label>        
+                {% render_field form.fiador_contato1 class="form-control phone-mask" %}
+            </div>    
+        </div>  
+        <div class="col-sm-2"> 
+            <div class="form-group" > 
+                <label for="" >{{form.fiador_celular1.label}} </label>
+                {% render_field form.fiador_celular1 class="form-control cel-phone-mask" %}
+                <label class="checkbox-inline"> {{form.whatsapp1.label}} <input type="checkbox" value="whatsapp1" id="whatsapp1" name="whatsapp1"></label>                    
+            </div>    
+        </div>  
+        <div class="col-sm-2">
+            <div class="form-group" > 
+                <label for="" > {{form.fiador_celular2.label}} </label>   
+                {% render_field form.fiador_celular2 class="form-control cel-phone-mask" %}
+                <label class="checkbox-inline"> {{form.whatsapp2.label}} <input type="checkbox" value="whatsapp2" id="whatsapp2" name="whatsapp2"></label>                      
+            </div>     
+        </div>             
+        <div class="col-sm-3">                    
+            <div class="form-group" >                
+                <label for="" >{{form.fiador_email.label}} </label>        
+                {% render_field form.fiador_email class="form-control lower_all" %}
+            </div>    
+        </div>  
+    </div>
+    
+    
     <hr>
         <h3>DADOS BANCÁRIOS</h3>               
     <hr/>
