--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -3,6 +3,7 @@
 {% block js %}{% endblock js %}
 {% block content %}
 
+
 <!-- https://www.schoolofnet.com/forum/topico/como-enviar-a-mensagem-de-sucesso-ou-erro-para-o-formulario-8495 -->    
 
 <div class="row" >
@@ -21,6 +22,7 @@
     {% csrf_token %}    
     <h3>CADASTRO PESSOAL</h3>
     <hr/> 
+    
     <div class="row" >
         <div class="col-sm-6">                    
             <div class="form-group" >                
@@ -65,13 +67,13 @@
                 </div>  
             </div>
         {% endif %}
-
-        <div class="col-sm-3">
+        
+        <!-- <div class="col-sm-3">
             <div class="form-group">
                 <label for="" class="required">{{form.estado_civil.label}}</label>
                 {% render_field form.estado_civil class="form-control" %}
             </div>  
-        </div>
+        </div> -->
         <div class="col-sm-3">
             <div class="form-group">
                 <label for="" class="required">{{form.naturalidade.label}}</label>
@@ -83,6 +85,37 @@
                 <label for="" class="required">{{form.nacionalidade.label}}</label>
                 {% render_field form.nacionalidade class="form-control" value="BRASILEIRA" %}
             </div>  
+        </div>        
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="" class="required">{{form.estado_civil.label}}</label>
+                <select class="form-control" data-toggle="modal">
+                    <option value="SOLTEIRO">SOLTEIRO</option>
+                    <option value ="CASADO">CASADO</option>
+                    <option value="VIÚVO">VIÚVO</option>
+                    <option value="DIVORCIADO">DIVORCIADO</option>
+                    <option value="OUTRO">OUTRO</option>
+                </select>
+            </div>  
+        </div>
+    
+        <!-- Modal -->
+        <div class="modal fade" id="cria-recinto" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+            </div>
+        </div>
         </div>
         <div class="col-sm-5">                    
             <div class="form-group" >                
@@ -379,6 +412,11 @@
     </div>
     </form> 
 </div>
+
+
+<script type="text/javascript">
+ 
+</script>
 
 {% endblock content %}
 
