--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -143,6 +143,14 @@ td.maiusculo{
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   
+
+<!-- LINHAS INSERIDAS PARA USAR MODAL DE ESTADO CIVIL -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+
+
+
 {% comment %} <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> {% endcomment %}
 <script type="text/javascript" src="{% static 'bootstrap/js/masks.js' %}"></script>
 <script type="text/javascript" src="{% static 'bootstrap/js/jquery.mask.min.js' %}"></script>
@@ -238,6 +246,13 @@ td.maiusculo{
   }
   /*OCULTA FORMULÁRIOS NA TELA DE CADASTRO DE CLIENTES - TABCONTENTS*/ 
 
+  /*MODAL DE ESTADO CIVIL*/
+  $('select').on('change', function () {
+    if ($(this).val() == "CASADO") {
+        $('#cria-recinto').modal('show');
+  }
+  });
+  /*MODAL DE ESTADO CIVIL*/
 </script>
   
 {% comment %} <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> {% endcomment %}
